<resources>
    <string name="app_name">SecureWire</string>
    <string name="login">LOGIN</string>
    <string name="tologin">Login</string>
    <string name="register">REGISTER</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="welcome">Welcome!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="back">Back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="breaking_news">Breaking News</string>
    <string name="recommendations">Recommendations</string>
</resources>